--- a/Terraform/KP-TERRAFORM-LABS/Section 1 - Deploying Infrastructure with Terraform/1. first-ec2.md
+++ b/Terraform/KP-TERRAFORM-LABS/Section 1 - Deploying Infrastructure with Terraform/1. first-ec2.md
@@ -4,6 +4,10 @@ https://registry.terraform.io/
 
 https://registry.terraform.io/providers/hashicorp/aws/latest/docs
 
+The AWS Access/Secret keys are like username and password for your AWS account.
+
+Whenever adding your code with in github, ensure that you DO NOT post the access/secret keys along with the code. You can remove the keys and add the code snippet.
+
 ### first_ec2.tf
 
 ```sh
