Update 2. creating a github repo with terraform.md

--- a/Terraform/KP-TERRAFORM-LABS/Section 1 - Deploying Infrastructure with Terraform/2. creating a github repo with terraform.md
+++ b/Terraform/KP-TERRAFORM-LABS/Section 1 - Deploying Infrastructure with Terraform/2. creating a github repo with terraform.md
@@ -26,8 +26,25 @@ resource "github_repository" "example" {
   visibility = "public"
 }
 ```
-You generate the token by Settings -> Developer Settings -> Fine-grained personal access tokens -> Repository access (All) just for testing ->
-Repository permissions (Administration read and write) -> Generate Token
+#### 🔐 GitHub Provider: Authentication First
+Just like with AWS, you must authenticate before Terraform can create a repo.
+
+GitHub uses a personal access token (PAT) — not keys.
+
+Steps:
+Go to GitHub → Settings → Developer Settings → Fine-grained tokens
+
+Create a new token:
+
+✅ Name: Terraform
+
+✅ Scope: “All repositories” (or narrow it down)
+
+✅ Repo permissions → Admin: Read/Write
+
+Copy the token
+
+📌 Paste it in your Terraform config i.e "your-token-here"
 
 #### Initialize and Apply:
 ```sh
